...
    <string name="action_filter_all">All transactions</string>
    <string name="action_filter_expenses">Expenses</string>
    <string name="action_filter_incomes">Incomes</string>
    <string name="action_filter_transfers">Transfers</string>
    <string name="action_filter_more">More…</string>

    <string name="action_new_expense">Expense</string>
    <string name="action_new_income">Income</string>
    <string name="action_new_incoming_transfer">Incoming transfer</string>
    <string name="action_new_outgoing_transfer">Outgoing transfer</string>

    <string name="action_settings">Settings</string>
    <string name="action_import">Import data</string>
    <string name="action_export">Export data</string>
    <string name="action_about">About</string>

...
    <string name="name">Name</string>
    <string name="see_more">See more</string>
    <string name="color_picker">Color picker</string>
    <string name="form_error">Your data has some errors.</string>
    <string name="confirmation_dialog_title">Closing Activity</string>
    <string name="confirmation_dialog_description">Are you sure you want to do this? Your changes will be discarded.</string>
    <string name="confirmation_dialog_yes">Yes</string>
    <string name="confirmation_dialog_no">No</string>
    <string name="generic_data_error">An error occurred while processing your data.</string>
    <string name="show_more_options">More options</string>
    <string name="show_less_options">Less options</string>
    <string name="toggle_more_options">Toggle more options</string>

...
    <!--  Account card  -->
    <string name="account_projected_balance">Projected balance</string>
    <string name="account_accumulated_balance">Accumulated balance</string>
    <string name="account_card_options">Account options</string>
    <string name="account_icon">Account type icon</string>
    <string name="account_initial_value_icon">Money icon</string>
    <string name="account_included_in_sum_icon">Check/Cross icon</string>
    <string name="account_card_details">Details</string>

    <string name="account_card_modify">Modify account</string>
    <string name="account_card_transactions">See transactions</string>
    <string name="account_card_archive">Archive account</string>
    <string name="account_card_delete">Delete account</string>
    <string name="account_card_archive_info">You can restore this account and related transactions later.</string>
    <string name="account_card_delete_warning">Are you sure you want to do this? This action cannot be undone.</string>
    <string name="account_card_restore">Restore</string>
    <string name="accounts_empty_archived_list">You don\'t have any archived accounts.</string>
    <string name="accounts_restore_all">Restore all</string>
...

    <string name="account_details">Account details</string>

    <string name="account_details_actions">Create new…</string>
    <string name="account_created_at">Created at</string>
    <string name="account_created_at_icon">Calendar icon</string>
    <string name="account_is_included_in_sum">Included in homepage sum</string>
    <string name="account_is_not_included_in_sum">Not included in homepage sum</string>
    <string name="account_balance_history">Balance history</string>
    <string name="account_balance_history_legend">(history)</string>
    <string name="account_confirmed_balance">Confirmed balance</string>
    <string name="account_balance_check_button">Check them</string>
    <string name="account_balance_total">Total</string>
    <string name="account_current_accumulated_balance">Current accumulated balance</string>
    <string name="account_balance_end_of_month">End of month</string>
    <string name="pending_transactions">Pending transactions</string>
    <string name="unresolved_transactions">Unresolved transactions</string>
    <string name="account_balance_not_included_legend">are not included on the accumulated balance.</string>
    <string name="wip">Work in progress</string>

    <string name="transaction_new_expense">New expense</string>

    <!-- Transaction AddEdit -->
    <string name="transaction_modify_expense">Modify expense</string>
    <string name="transaction_new_income">New income</string>
    <string name="transaction_modify_income">Modify income</string>
    <string name="transaction_new_transfer">New transfer</string>
    <string name="transaction_modify_transfer">Modify transfer</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_concept">Concept</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_specify_time">Specify time</string>
    <string name="transaction_from_account">From account</string>
...
