<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountDetailsActivity">

    <include layout="@layout/layout_appbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:id="@+id/account_details_container"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/account_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="28dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFF"
                app:cardCornerRadius="15dp"
                app:contentPadding="20dp"
                app:contentPaddingBottom="30dp" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/account_latest_balance_label"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextSecondary"
                        android:text="@string/account_current_balance"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/account_latest_balance"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:textColor="@color/colorTextHighlight"
                        app:layout_constraintTop_toBottomOf="@id/account_latest_balance_label" />

                    <LinearLayout
                        android:id="@+id/account_details_inner_linear_layout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/account_latest_balance"
                        android:baselineAligned="false">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1" >

                            <ImageView
                                android:id="@+id/account_initial_value_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/account_initial_value_icon"
                                android:src="@drawable/ic_attach_money_black_24dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />
                            <TextView
                                android:id="@+id/account_initial_value_label"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textColor="@color/colorTextSecondary"
                                android:text="@string/account_initial_value"
                                android:textSize="12sp"
                                android:layout_marginStart="10dp"
                                app:layout_constraintStart_toEndOf="@id/account_initial_value_icon"
                                app:layout_constraintTop_toTopOf="parent" />
                            <TextView
                                android:id="@+id/account_initial_value"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                app:layout_constraintStart_toStartOf="@id/account_initial_value_label"
                                app:layout_constraintTop_toBottomOf="@id/account_initial_value_label" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_marginStart="16dp">

                            <ImageView
                                android:id="@+id/account_created_at_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/account_created_at_icon"
                                android:src="@drawable/ic_date_range_black_24dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />
                            <TextView
                                android:id="@+id/account_created_at_label"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textColor="@color/colorTextSecondary"
                                android:text="@string/account_created_at"
                                android:textSize="12sp"
                                android:layout_marginStart="10dp"
                                app:layout_constraintStart_toEndOf="@id/account_created_at_icon"
                                app:layout_constraintTop_toTopOf="parent" />
                            <TextView
                                android:id="@+id/account_created_at_text"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                app:layout_constraintStart_toStartOf="@id/account_created_at_label"
                                app:layout_constraintTop_toBottomOf="@id/account_created_at_label" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/account_type_layout"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:layout_constraintTop_toBottomOf="@id/account_details_inner_linear_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="16dp" >

                        <ImageView
                            android:id="@+id/account_type_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/account_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                        <TextView
                            android:id="@+id/account_type_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorTextSecondary"
                            android:text="@string/account_type"
                            android:textSize="12sp"
                            android:layout_marginStart="10dp"
                            app:layout_constraintStart_toEndOf="@id/account_type_icon"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/account_type"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            app:layout_constraintStart_toStartOf="@id/account_type_label"
                            app:layout_constraintTop_toBottomOf="@id/account_type_label" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/account_included_in_sum_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/account_included_in_sum_icon"
                        app:layout_constraintTop_toBottomOf="@id/account_type_layout"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/account_included_in_sum_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/account_included_in_sum_icon"
                        app:layout_constraintTop_toTopOf="@id/account_included_in_sum_icon"
                        app:layout_constraintBottom_toBottomOf="@id/account_included_in_sum_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/account_floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-28dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="#00000000"
                app:srcCompat="@drawable/ic_pencil_edit_black_24dp" />

            <TextView
                android:id="@+id/account_balance_history_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="viewStart"
                android:text="@string/account_balance_history"
                tools:ignore="RtlSymmetry" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="#FFFFFF"
                app:cardCornerRadius="15dp"
                app:contentPadding="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/account_see_more_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="#00000000"
                        android:text="@string/see_more" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>